--- a/deploy-as-code/helm/charts/health-services/project/values.yaml
+++ b/deploy-as-code/helm/charts/health-services/project/values.yaml
@@ -146,49 +146,49 @@ env: |
   - name: EGOV_SEARCH_PRODUCT_VARIANT_URL
     value: "/product/variant/v1/_search"
   - name: PROJECT.TASK.KAFKA.CREATE.TOPIC
-    value: "save-project-task-topic"
+    value: "save-project-task-training-topic"
   - name: PROJECT.TASK.CONSUMER.BULK.CREATE.TOPIC
-    value: "save-project-task-bulk-topic"
+    value: "save-project-task-bulk-training-topic"
   - name: PROJECT.TASK.KAFKA.UPDATE.TOPIC
-    value: "update-project-task-topic"
+    value: "update-project-task-training-topic"
   - name: PROJECT.TASK.CONSUMER.BULK.UPDATE.TOPIC
-    value: "update-project-task-bulk-topic"
+    value: "update-project-task-bulk-training-topic"
   - name: PROJECT.TASK.KAFKA.DELETE.TOPIC
-    value: "delete-project-task-topic"
+    value: "delete-project-task-training-topic"
   - name: PROJECT.TASK.CONSUMER.BULK.DELETE.TOPIC
-    value: "delete-project-task-bulk-topic"
+    value: "delete-project-task-bulk-training-topic"
   - name: PROJECT.BENEFICIARY.KAFKA.CREATE.TOPIC
-    value: "save-project-beneficiary-topic"
+    value: "save-project-beneficiary-training-topic"
   - name: PROJECT.BENEFICIARY.KAFKA.UPDATE.TOPIC
-    value: "update-project-beneficiary-topic"
+    value: "update-project-beneficiary-training-topic"
   - name: PROJECT.BENEFICIARY.KAFKA.DELETE.TOPIC
-    value: "delete-project-beneficiary-topic"
+    value: "delete-project-beneficiary-training-topic"
   - name: PROJECT.BENEFICIARY.CONSUMER.BULK.CREATE.TOPIC
-    value: "project-beneficiary-consumer-bulk-create-topic"
+    value: "project-beneficiary-consumer-bulk-create-training-topic"
   - name: PROJECT.BENEFICIARY.CONSUMER.BULK.UPDATE.TOPIC
-    value: "project-beneficiary-consumer-bulk-update-topic"
+    value: "project-beneficiary-consumer-bulk-update-training-topic"
   - name: PROJECT.BENEFICIARY.CONSUMER.BULK.DELETE.TOPIC
-    value: "project-beneficiary-consumer-bulk-delete-topic"
+    value: "project-beneficiary-consumer-bulk-delete-training-topic"
   - name: PROJECT.STAFF.KAFKA.DELETE.TOPIC
-    value: "delete-project-staff-topic"
+    value: "delete-project-staff-training-topic"
   - name: PROJECT.STAFF.KAFKA.CREATE.TOPIC
-    value: "save-project-staff-topic"
+    value: "save-project-staff-training-topic"
   - name: PROJECT.STAFF.KAFKA.UPDATE.TOPIC
-    value: "update-project-staff-topic"
+    value: "update-project-staff-training-topic"
   - name: PROJECT.STAFF.CONSUMER.BULK.DELETE.TOPIC
-    value: "delete-project-staff-bulk-topic"
+    value: "delete-project-staff-bulk-training-topic"
   - name: PROJECT.STAFF.CONSUMER.BULK.CREATE.TOPIC
-    value: "create-project-staff-bulk-topic"
+    value: "create-project-staff-bulk-training-topic"
   - name: PROJECT.STAFF.CONSUMER.BULK.UPDATE.TOPIC
-    value: "update-project-staff-bulk-topic"
+    value: "update-project-staff-bulk-training-topic"
   - name: SEARCH_API_LIMIT
     value: "1000"
   - name: PROJECT.DOCUMENT.ID.VERIFICATION.REQUIRED
     value: "false"
   - name: PROJECT.MANAGEMENT.SYSTEM.KAFKA.CREATE.TOPIC
-    value: "save-project"
+    value: "save-project-training"
   - name: PROJECT.MANAGEMENT.SYSTEM.KAFKA.UPDATE.TOPIC
-    value: "update-project"
+    value: "update-project-training"
   - name: PROJECT.DEFAULT.OFFSET
     value: "0"
   - name: PROJECT.DEFAULT.LIMIT
@@ -200,29 +200,29 @@ env: |
   - name: PROJECT.RESOURCE.IDGEN.ID.FORMAT
     value: "project.resource.id"
   - name: PROJECT.RESOURCE.KAFKA.CREATE.TOPIC
-    value: "save-project-resource-topic"
+    value: "save-project-resource-training-topic"
   - name: PROJECT.RESOURCE.KAFKA.UPDATE.TOPIC
-    value: "update-project-resource-topic"
+    value: "update-project-resource-training-topic"
   - name: PROJECT.RESOURCE.KAFKA.DELETE.TOPIC
-    value: "delete-project-resource-topic"
+    value: "delete-project-resource-training-topic"
   - name: PROJECT.RESOURCE.CONSUMER.BULK.CREATE.TOPIC
-    value: "save-project-resource-bulk-topic"
+    value: "save-project-resource-bulk-training-topic"
   - name: PROJECT.RESOURCE.CONSUMER.BULK.UPDATE.TOPIC
-    value: "update-project-resource-bulk-topic"
+    value: "update-project-resource-bulk-training-topic"
   - name: PROJECT.RESOURCE.CONSUMER.BULK.DELETE.TOPIC
-    value: "delete-project-resource-bulk-topic"
+    value: "delete-project-resource-bulk-training-topic"
   - name: PROJECT.FACILITY.KAFKA.DELETE.TOPIC
-    value: "delete-project-facility-topic"
+    value: "delete-project-facility-training-topic"
   - name: PROJECT.FACILITY.KAFKA.CREATE.TOPIC
-    value: "save-project-facility-topic"
+    value: "save-project-facility-training-topic"
   - name: PROJECT.FACILITY.KAFKA.UPDATE.TOPIC
-    value: "update-project-facility-topic"
+    value: "update-project-facility-training-topic"
   - name: PROJECT.FACILITY.CONSUMER.BULK.DELETE.TOPIC
-    value: "delete-project-facility-bulk-topic"
+    value: "delete-project-facility-bulk-training-topic"
   - name: PROJECT.FACILITY.CONSUMER.BULK.CREATE.TOPIC
-    value: "create-project-facility-bulk-topic"
+    value: "create-project-facility-bulk-training-topic"
   - name: PROJECT.FACILITY.CONSUMER.BULK.UPDATE.TOPIC
-    value: "update-project-facility-bulk-topic"
+    value: "update-project-facility-bulk-training-topic"
   - name: EGOV_FACILITY_HOST
     valueFrom:
       configMapKeyRef:
