updated redis host

--- a/deploy-as-code/helm/charts/cluster-configs/values.yaml
+++ b/deploy-as-code/helm/charts/cluster-configs/values.yaml
@@ -1,13 +1,13 @@
 cluster-configs:
   db:
-    namespace: egov
+    namespace: training
     name: db-service
     port: 5432
     targetPort: 5432
 
   root-ingress:
     name: root-ingress
-    namespace: egov
+    namespace: training
     cert-issuer: "letsencrypt-staging"
     appRoot: citizen
     serviceName: citizen
@@ -16,7 +16,7 @@ cluster-configs:
   nginx-errors:
     enabled: false
     name: nginx-errors
-    namespace: egov
+    namespace: training
     serviceName: nginx-errors
     servicePort: 80
 
@@ -40,23 +40,23 @@ cluster-configs:
 
   secrets:
     db: 
-      namespace: [ egov ]
+      namespace: [ training ]
       name: db
 
     egov-notification-sms:
-      namespace: egov
+      namespace: training
       name: egov-notification-sms
 
     egov-filestore: 
-      namespace: egov
+      namespace: training
       name: egov-filestore     
       
     egov-location: 
-      namespace: egov
+      namespace: training
       name: egov-location
 
     egov-pg-service: 
-      namespace: egov
+      namespace: training
       name: egov-pg-service                 
 
     pgadmin: 
@@ -64,63 +64,63 @@ cluster-configs:
       name: pgadmin       
 
     egov-enc-service: 
-      namespace: egov
+      namespace: training
       name: egov-enc-service       
 
     egov-notification-mail: 
-      namespace: egov
+      namespace: training
       name: egov-notification-mail
 
     home-isolation-notification-mail: 
-      namespace: egov
+      namespace: training
       name: home-isolation-notification-mail      
 
     git-sync: 
-      namespace: [ egov ]
+      namespace: [ training ]
       name: git-creds   
 
     kibana: 
-      namespace: egov
+      namespace: training
       name: kibana-creds                       
 
     kibana-infra: 
-      namespace: egov
+      namespace: training
       name: kibana-infra-creds     
 
     egov-si-microservice:
-      namespace: egov
+      namespace: training
       name: egov-si-microservice
 
     egov-edcr-notification:
-      namespace: egov
+      namespace: training
       name: egov-edcr-notification 
 
     egov-edcr-bank-gateway:
-      namespace: egov
+      namespace: training
       name: egov-edcr-bank-gateway
 
     chatbot:
-      namespace: egov
+      namespace: training
       name: chatbot
     
     covid-chatbot:
-      namespace: egov
+      namespace: training
       name: covid-chatbot
 
     egov-user-chatbot:
-      namespace: egov
+      namespace: training
       name: egov-user-chatbot
     
     hcm-moz-impl:
-      namespace: egov
+      namespace: training
       name: hcm-moz-impl
 
     oauth2-proxy:
-      namespace: egov
+      namespace: training
       name: oauth2-proxy   
 
     case-management:
-      namespace: egov
+      namespace: training
       name: case-management   
   
     minio:
@@ -136,11 +136,11 @@ cluster-configs:
       name: jenkins 
     
     mysql:
-      namespace: egov
+      namespace: training
       name: mysql
     
     wordpress:
-      namespace: egov
+      namespace: training
       name: wordpress
 
     postgres:
@@ -148,7 +148,7 @@ cluster-configs:
       name: postgres
 
     elastic:
-      namespace: egov
+      namespace: training
       name: elastic
 
     jupyter:
