--- a/deploy-as-code/helm/charts/health-services/facility/values.yaml
+++ b/deploy-as-code/helm/charts/health-services/facility/values.yaml
@@ -57,10 +57,7 @@ env: |
   - name: FACILITY.IDGEN.ID.FORMAT
     value: "facility.id"
   - name: SPRING_REDIS_HOST
-    valueFrom:
-      configMapKeyRef:
-        name: egov-config
-        key: redis-host
+    value: redis.backbone
   - name: SPRING_REDIS_PORT
     value: "6379"
   - name: SPRING_CACHE_TYPE
