--- a/deploy-as-code/helm/environments/unified-moz-health-qa-training.yaml
+++ b/deploy-as-code/helm/environments/unified-moz-health-qa-training.yaml
@@ -85,8 +85,8 @@ cluster-configs:
         egov-idgen: "http://egov-idgen:8080/"
         egov-otp: "http://egov-otp:8080/"
         egov-common-workflows: "http://egov-common-workflows:8080/"
-        egov-mdms-service: "http://egov-mdms-service:8080/"
-        egov-mdms-service-test: "http://egov-mdms-service-test:8080/"
+        egov-mdms-service: "http://egov-mdms-service.egov:8080/"
+        egov-mdms-service-test: "http://egov-mdms-service-test.egov:8080/"
         egov-mdms-create: "http://egov-mdms-create.training:8080/"
         egov-eis: "http://egov-eis:8080/"
         egov-workflow: "http://egov-workflow:8080/"
