attendance to moz uat

--- a/config-as-code/product-release-charts/Health/dependancy_chart-moz-health-uat.yaml
+++ b/config-as-code/product-release-charts/Health/dependancy_chart-moz-health-uat.yaml
@@ -90,3 +90,4 @@ modules:
       - egovio/hcm-moz-impl:develop-6a0adc0-323
       - egovio/egov-mdms-create:develop-3a53c3b-3
       - egovio/referralmanagement:inc-downsync-impel-31ff41b430-137
+      - egovio/attendance:master-impel-ea8682f3-55
